apply plugin: 'com.android.application'

android {
    compileSdk 34

    namespace 'com.sshdaemon'

    defaultConfig {
        applicationId "com.daemon.ssh"
        minSdkVersion 26
        targetSdkVersion 33
        versionCode 26
        versionName "2.1.10"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/DEPENDENCIES.txt', 'META-INF/LICENSE.txt', 'META-INF/NOTICE.txt', 'META-INF/NOTICE', 'META-INF/LICENSE', 'META-INF/DEPENDENCIES', 'META-INF/notice.txt', 'META-INF/license.txt', 'META-INF/dependencies.txt', 'META-INF/LGPL2.1', 'META-INF/services/javax.annotation.processing.Processor']
        }
    }


    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }


    testOptions {
        unitTests.returnDefaultValues = true
    }
    lint {
        baseline file('lint-baseline.xml')
    }
}


dependencies {
    api 'com.google.android.material:material:1.10.0'

    implementation 'org.apache.sshd:sshd-core:2.10.0'
    implementation 'org.apache.sshd:sshd-sftp:2.10.0'
    implementation 'org.apache.sshd:sshd-contrib:2.10.0'
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'org.slf4j:slf4j-log4j12:2.0.7'
    implementation 'org.bouncycastle:bcpkix-jdk15to18:1.75'
    implementation 'org.bouncycastle:bcprov-jdk15to18:1.75'
    implementation 'de.mindpipe.android:android-logging-log4j:1.0.3'
    implementation 'net.i2p.crypto:eddsa:0.3.0'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.hamcrest:hamcrest-all:1.3'
    testImplementation 'org.mockito:mockito-core:5.4.0'
    androidTestImplementation 'androidx.test:core:1.5.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
}